// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart page should be able to match the snapshot when cart is empty 1`] = `
<View
  className="flex-1 bg-slate-950 p-6"
>
  <Screen
    options={
      {
        "headerRight": [Function],
        "headerTitle": [Function],
      }
    }
  />
  <Text
    className="self-start font-normal text-slate-100 text-xl"
  >
    O carrinho de compras está vazio
  </Text>
  <RCTScrollView
    ItemSeparatorComponent={[Function]}
    data={[]}
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View />
  </RCTScrollView>
  <View
    className="mt-4 flex flex-row items-center justify-between bg-primary p-2"
  >
    <Text
      className="font-semibold text-slate-100 text-xl"
    >
      Total: R$ 
      0
    </Text>
  </View>
</View>
`;

exports[`Cart page should be able to match the snapshot when cart is not empty 1`] = `
<View
  className="flex-1 bg-slate-950 p-6"
>
  <Screen
    options={
      {
        "headerRight": [Function],
        "headerTitle": [Function],
      }
    }
  />
  <RCTScrollView
    ItemSeparatorComponent={[Function]}
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View />
  </RCTScrollView>
  <View
    className="mt-4 flex flex-row items-center justify-between bg-primary p-2"
  >
    <Text
      className="font-semibold text-slate-100 text-xl"
    >
      Total: R$ 
    </Text>
  </View>
</View>
`;
